# social_distancing_ai

./: .gitignore  CVDL_DatasetFasterRCNN.ipynb  Dockerfile  LICENSE  README.md  ambiente_linux_server.txt  ambiente_windows.txt  ambiente_windows_pip.txt  apuntes_proyecto.docx  dataset.py  dist_covid2.py  entrenamiento3000.txt  gui.spec  mouse_clicks.py  notas_docker.txt  prueba_gpu.ipynb  pyproject.toml  requirements.txt  retinanet_classes.csv  test.csv  test3000.txt  train.csv  train_retinanet_local.ipynb  video_detection.py
.ipynb_checkpoints/: CVDL_DatasetFasterRCNN-checkpoint.ipynb  prueba_gpu-checkpoint.ipynb  train_retinanet_local-checkpoint.ipynb
gui/: gui.py  gui.spec  hiloprediction.py  predictionclass.py  predictsolo.py  videostream.py
logs/: events.out.tfevents.1616975496.uaodeepia-X10DGQ
