[tool.poetry]
name = "od_distanciamiento_social"
version = "0.1.0"
description = "Social Distancing with AI"
authors = ["stevenparrag <steven.parra@uao.edu.co>"]

[tool.poetry.dependencies]
python = "3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
